explore file is modified

--- a/scripts/explore.ipynb
+++ b/scripts/explore.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 139,
    "id": "822e9316",
    "metadata": {},
    "outputs": [
@@ -307,13 +307,8 @@
      "text": [
       "\n",
       "Unique values in scc level three after filtering:\n",
-      "1: Lube Oil Refining\n",
-      "2: Re-refining of Lube Oils and Greases\n",
-      "3: Refined Oil\n",
-      "4: Refinery Crude Feed\n",
-      "5: Refinery Feed\n",
-      "6: Refinery Gas\n",
-      "7: Sugar Cane Refining\n"
+      "1: Copper\n",
+      "2: Primary Copper Smelting\n"
      ]
     }
    ],
@@ -369,22 +364,15 @@
     "\n",
     "# filtered_df = filter_scc_data(df_scc, keywords=[\"ship\", \"vessel\"], scc_level=3)\n",
     "# filtered_df = filter_scc_data(df_scc, keywords=[\"aluminum\"], scc_level=3)\n",
+    "# filtered_df = filter_scc_data(df_scc, keywords=[\"aluminum\"], scc_level=3)\n",
     "# filtered_df = filter_scc_data(df_scc, keywords=[\"iron\", \"steel\"], scc_level=3)\n",
     "# filtered_df = filter_scc_data(df_scc, keywords=[\"electric\"], scc_level=2)\n",
     "# filtered_df = filter_scc_data(df_scc, keywords=[\"electric\"], scc_level=2)\n",
-    "filtered_df = filter_scc_data(df_scc, keywords=[\"refin\"], scc_level=3)\n",
+    "# filtered_df = filter_scc_data(df_scc, keywords=[\"Petroleum Industry\"], scc_level=2)\n",
+    "# filtered_df = filter_scc_data(df_scc, keywords=[\"iron\"], scc_level=2)\n",
+    "filtered_df = filter_scc_data(df_scc, keywords=[\"copper\"], scc_level=3)\n",
     "\n",
     "scc_set = set(filtered_df['SCC'].astype(int))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60e3498f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_df[]"
    ]
   },
   {
@@ -500,6 +488,42 @@
    "source": [
     "_df = filter_poll_data(combined_df, \"PM25-PRI\", scc_set)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "cf3af80f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['MW', 'E6BTU/HR', nan, 'KW', 'HP', 'E3LB/HR', 'GAL', 'BBL',\n",
+       "       'BLRHP', 'DATAMIGRATION', 'E6FT3S/DAY', 'BBL/DAY', 'FT3/DAY',\n",
+       "       'LB/HR', 'TON/DAY', 'GAL/DAY', 'FT2/HR', 'E3FT3/DAY', 'TON/HR',\n",
+       "       'FT/HR', 'GAL/YR', 'E3HP', 'FT3SD/HR', 'AMP-HR/HR', 'E3GAL/DAY',\n",
+       "       'BUSHEL/HR', 'GAL/HR', 'TON/YR', 'E3FT2/HR', 'E6FT2/YR',\n",
+       "       'E3GAL/HR', 'LB/YR', 'BBL/YR', 'GAL/MIN', 'E3TON/YR', 'E6GAL/DAY',\n",
+       "       'LB/DAY', 'E6LB/DAY', 'E6BDFT/YR', 'FT3/MIN', 'BTU/HR', 'BUSHEL',\n",
+       "       'TON', 'E3GAL/YR', 'E3BDFT/HR', 'MILE/YR'], dtype=object)"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df.design_capacity_units.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97cc8ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
